--- a/prisma/.env
+++ b/prisma/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/yum-nexus"
+DATABASE_URL=postgresql://ozimos:root@localhost:5432/yum_graphql
