--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "yum-nexus",
   "license": "UNLICENSED",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "lodash": "^4.17.15",
     "nexus": "^0.20.0",
     "nexus-plugin-prisma": "^0.7.0"
   },
   "scripts": {
     "format": "npx prettier --write './**/*.{ts,md}'",
     "dev": "nexus dev",
+    "migrate": "dotenv -e prisma/.env -- node -r esm database/migrate",
     "build": "nexus build",
     "start": "node node_modules/.build"
   },
@@ -17,6 +20,8 @@
     "trailingComma": "all"
   },
   "devDependencies": {
+    "dotenv-cli": "^3.1.0",
+    "faker": "^4.1.0",
     "prettier": "^2.0.5"
   }
 }
