--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "yum-nexus",
   "license": "UNLICENSED",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
+    "@nexus/schema": "^0.13.1",
+    "bcrypt": "^4.0.1",
+    "esm": "^3.2.25",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "nexus": "^0.20.0",
     "nexus-plugin-prisma": "^0.7.0"
@@ -10,7 +13,7 @@
   "scripts": {
     "format": "npx prettier --write './**/*.{ts,md}'",
     "dev": "nexus dev",
-    "migrate": "dotenv -e prisma/.env -- node -r esm database/migrate",
+    "migrate": "dotenv -e prisma/.env -- node -r esm prisma/migrate",
     "build": "nexus build",
     "start": "node node_modules/.build"
   },
@@ -20,8 +23,12 @@
     "trailingComma": "all"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/jsonwebtoken": "^8.3.9",
+    "@types/lodash": "^4.14.150",
     "dotenv-cli": "^3.1.0",
     "faker": "^4.1.0",
+    "jest": "^25.4.0",
     "prettier": "^2.0.5"
   }
 }
