--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "@nexus/schema": "^0.13.1",
     "bcrypt": "^4.0.1",
     "esm": "^3.2.25",
+    "graphql-middleware": "^4.0.2",
+    "graphql-shield": "^7.2.6",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "nexus": "^0.20.0",
