--- a/package.json
+++ b/package.json
@@ -9,18 +9,21 @@
     "graphql-shield": "^7.2.6",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "nexus": "^0.20.0",
-    "nexus-plugin-prisma": "^0.7.0"
+    "nexus": "^0.22.0",
+    "nexus-plugin-prisma": "^0.8.0"
   },
   "scripts": {
-    "format": "npx prettier --write './**/*.{ts,md}'",
+    "format": "npx prettier --write './**/*.{js,ts,md}'",
     "dev": "nexus dev",
-    "migrate": "dotenv -e prisma/.env -- node -r esm prisma/migrate",
+    "generate": "prisma generate",
+    "postmigrate": "dotenv -e prisma/.env -- node prisma/migrate",
+    "migrate": "prisma migrate up --experimental",
     "migrate:save": "prisma migrate save --experimental",
-    "migrate:reset": "reset && migrate",
-    "reset": "dotenv -e prisma/.env -- node -r esm prisma/reset",
+    "drop": "dotenv -e prisma/.env  -- node prisma/drop",
+    "reset": "yarn drop && yarn migrate",
     "build": "nexus build",
-    "start": "node node_modules/.build"
+    "start": "node node_modules/.build",
+    "test": "dotenv -e prisma/.env -e .env -e .env.test -- jest"
   },
   "prettier": {
     "semi": false,
@@ -28,12 +31,16 @@
     "trailingComma": "all"
   },
   "devDependencies": {
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-typescript": "^7.9.0",
     "@types/bcrypt": "^3.0.0",
     "@types/jsonwebtoken": "^8.3.9",
     "@types/lodash": "^4.14.150",
     "dotenv-cli": "^3.1.0",
     "faker": "^4.1.0",
     "jest": "^25.4.0",
+    "pg": "^8.2.1",
     "prettier": "^2.0.5"
   }
 }
