--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,11 @@ failed-inferMigrationSteps*
 # Environment Variables
 prisma/.env
 .env
+envvars
+
+# Elastic Beanstalk Files
+.ebignored
+.ignored
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
