--- a/package.json
+++ b/package.json
@@ -4,13 +4,22 @@
   "dependencies": {
     "@nexus/schema": "^0.13.1",
     "bcrypt": "^4.0.1",
-    "esm": "^3.2.25",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "cuid": "^2.1.8",
+    "dotenv": "^8.2.0",
+    "google-auth-library": "^6.0.0",
     "graphql-middleware": "^4.0.2",
     "graphql-shield": "^7.2.6",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "nexus": "^0.22.0",
-    "nexus-plugin-prisma": "^0.8.0"
+    "nexus-plugin-prisma": "^0.8.0",
+    "nexus-plugin-shield": "^0.1.2",
+    "node-fetch": "^2.6.0",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0"
   },
   "scripts": {
     "format": "npx prettier --write './**/*.{js,ts,md}'",
@@ -35,11 +44,20 @@
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-typescript": "^7.9.0",
     "@types/bcrypt": "^3.0.0",
-    "@types/jsonwebtoken": "^8.3.9",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/cors": "^2.8.6",
+    "@types/jest": "^25.2.3",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.150",
+    "@types/passport": "^1.0.3",
+    "@types/passport-facebook": "^2.1.10",
+    "@types/passport-google-oauth20": "^2.0.3",
+    "babel-jest": "^26.0.1",
     "dotenv-cli": "^3.1.0",
     "faker": "^4.1.0",
     "jest": "^25.4.0",
+    "jest-environment-node": "^26.0.1",
+    "nanoid": "^3.1.9",
     "pg": "^8.2.1",
     "prettier": "^2.0.5"
   }
