--- a/.ebextensions/03_more_env.config
+++ b/.ebextensions/03_more_env.config
@@ -2,7 +2,8 @@ option_settings:
     aws:elasticbeanstalk:application:environment:
         NPM_USE_PRODUCTION: false
         NODE_ENV: live
-        TOKEN_EXPIRY: 6h
+        TOKEN_EXPIRY: 15m
+        REFRESH_TOKEN_EXPIRY: 7d
         GOOGLE_CLIENT_ID: 815607490371-b0jcpq2u7u0jcrehc3v6vp5s2qs5g8ku.apps.googleusercontent.com
         GOOGLE_BROWSER_CLIENT_ID: 815607490371-b0jcpq2u7u0jcrehc3v6vp5s2qs5g8ku.apps.googleusercontent.com
         FACEBOOK_CLIENT_ID: 230051388091734
