--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@nexus/schema": "^0.13.1",
-    "bcrypt": "^4.0.1",
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cuid": "^2.1.8",
@@ -13,9 +13,9 @@
     "graphql-shield": "^7.2.6",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "nexus": "^0.22.0",
-    "nexus-plugin-prisma": "^0.8.0",
-    "nexus-plugin-shield": "^0.1.2",
+    "nexus": "^0.23.0",
+    "nexus-plugin-prisma": "^0.9.0",
+    "nexus-plugin-shield": "^0.1.4",
     "node-fetch": "^2.6.0",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
@@ -28,10 +28,11 @@
     "postmigrate": "dotenv -e prisma/.env -- node prisma/migrate",
     "migrate": "prisma migrate up --experimental",
     "migrate:save": "prisma migrate save --experimental",
+    "seed": "dotenv -e prisma/.env  -- node prisma/seed",
     "drop": "dotenv -e prisma/.env  -- node prisma/drop",
     "reset": "yarn drop && yarn migrate",
     "build": "nexus build",
-    "start": "node node_modules/.build",
+    "start": "node .nexus/build/api",
     "test": "dotenv -e prisma/.env -e .env -e .env.test -- jest"
   },
   "prettier": {
@@ -43,7 +44,7 @@
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-typescript": "^7.9.0",
-    "@types/bcrypt": "^3.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
     "@types/jest": "^25.2.3",
