--- a/package.json
+++ b/package.json
@@ -13,17 +13,23 @@
     "graphql-shield": "^7.2.6",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
+    "next": "^9.4.4",
     "nexus": "^0.23.0",
     "nexus-plugin-prisma": "^0.9.0",
     "nexus-plugin-shield": "^0.1.4",
     "node-fetch": "^2.6.0",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "scripts": {
     "format": "npx prettier --write './**/*.{js,ts,md}'",
-    "dev": "nexus dev",
+    "dev": "next",
+    "build": "next build",
+    "start": "next start",
+    "nexus-dev": "nexus dev",
     "generate": "prisma generate",
     "postmigrate": "dotenv -e prisma/.env -- node prisma/migrate",
     "migrate": "prisma migrate up --experimental",
@@ -31,8 +37,6 @@
     "seed": "dotenv -e prisma/.env  -- node prisma/seed",
     "drop": "dotenv -e prisma/.env  -- node prisma/drop",
     "reset": "yarn drop && yarn migrate",
-    "build": "nexus build",
-    "start": "node .nexus/build/api",
     "test": "dotenv -e prisma/.env -e .env -e .env.test -- jest"
   },
   "prettier": {
