--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,31 @@
   "compilerOptions": {
     "target": "ES2019",
     "esModuleInterop": true,
-    "module": "commonjs",
-    "lib": ["ESNEXT"],
-    "strict": false,
-    "rootDir": "api",
+    "module": "esnext",
+    "lib": [
+      "ESNEXT"
+    ],
+    "strict": false,    
+    "rootDir": ".",
+
     "moduleResolution": "node",
-    "plugins": [{ "name": "nexus/typescript-language-service" }]
+    "plugins": [
+      {
+        "name": "nexus/typescript-language-service"
+      }
+    ],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "preserve"
   },
-  "include": ["api"]
+  "include": [
+    "api", "components", "pages", "lib"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
