--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "yum-nexus",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.0.0-rc.4",
+    "@material-ui/core": "^4.10.2",
     "@nexus/schema": "^0.13.1",
     "bcryptjs": "^2.4.3",
+    "cookie": "^0.4.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cuid": "^2.1.8",
     "dotenv": "^8.2.0",
     "google-auth-library": "^6.0.0",
+    "graphql": "^14.0.2",
     "graphql-middleware": "^4.0.2",
     "graphql-shield": "^7.2.6",
     "jsonwebtoken": "^8.5.1",
@@ -21,12 +25,6 @@
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
     "passport-google-oauth20": "^2.0.0",
-    "@apollo/react-hooks": "3.1.3",
-    "apollo-cache-inmemory": "1.6.5",
-    "apollo-client": "2.6.8",
-    "apollo-link-http": "1.5.16",
-    "graphql": "^14.0.2",
-    "graphql-tag": "2.10.3",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
@@ -46,7 +44,6 @@
     "drop": "dotenv -e prisma/.env  -- node prisma/drop",
     "reset": "yarn drop && yarn migrate",
     "test": "dotenv -e prisma/.env -e .env -e .env.test -- jest",
-    
     "deploy:preview": "now",
     "deploy:prod": "now --prod"
   },
@@ -55,27 +52,44 @@
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-typescript": "^7.9.0",
+    "@graphql-codegen/cli": "^1.13.5",
+    "@graphql-codegen/fragment-matcher": "^1.13.5",
+    "@graphql-codegen/introspection": "^1.13.5",
+    "@graphql-codegen/typescript": "^1.13.5",
+    "@graphql-codegen/typescript-operations": "^1.13.5",
+    "@graphql-codegen/typescript-react-apollo": "^1.13.5",
+    "@prisma-labs/prettier-config": "0.1.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/cookie": "^0.4.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
     "@types/jest": "^25.2.3",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.150",
+    "@types/node": "13.13.10",
     "@types/passport": "^1.0.3",
     "@types/passport-facebook": "^2.1.10",
     "@types/passport-google-oauth20": "^2.0.3",
+    "@types/react": "16.9.34",
+    "@types/react-facebook-login": "^4.1.1",
+    "@typescript-eslint/eslint-plugin": "^3.0.0",
+    "@typescript-eslint/parser": "^3.0.0",
     "babel-jest": "^26.0.1",
+    "babel-plugin-graphql-tag": "^2.5.0",
     "dotenv-cli": "^3.1.0",
+    "eslint": "^7.0.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.2",
     "faker": "^4.1.0",
     "jest": "^25.4.0",
     "jest-environment-node": "^26.0.1",
     "nanoid": "^3.1.9",
     "pg": "^8.2.1",
     "prettier": "^2.0.5",
-    "babel-plugin-graphql-tag": "^2.5.0",
-    "@prisma-labs/prettier-config": "0.1.0",
-    "@types/node": "13.13.10",
-    "@types/react": "16.9.34",
     "typescript": "3.9.5"
   }
 }
