add base UI files

--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/client": "^3.0.0-rc.4",
+    "@apollo/link-context": "^2.0.0-beta.3",
+    "@apollo/link-error": "^2.0.0-beta.3",
     "@material-ui/core": "^4.10.2",
+    "@material-ui/icons": "^4.9.1",
     "@nexus/schema": "^0.13.1",
+    "apollo-cache-instorage": "^0.2.5",
+    "apollo-link-token-refresh": "^0.3.1",
     "bcryptjs": "^2.4.3",
+    "clsx": "^1.1.1",
     "cookie": "^0.4.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
@@ -16,6 +22,7 @@
     "graphql-middleware": "^4.0.2",
     "graphql-shield": "^7.2.6",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
     "next": "^9.4.4",
     "nexus": "^0.23.0",
@@ -27,7 +34,8 @@
     "passport-google-oauth20": "^2.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "recharts": "^1.8.5"
   },
   "scripts": {
     "format": "npx prettier --write './**/*.{js,ts,md}'",
