--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "recharts": "^1.8.5"
+    "react-hook-form": "^5.7.2",
+    "recharts": "^1.8.5",
+    "zod": "^1.7.0"
   },
   "scripts": {
     "format": "npx prettier --write './**/*.{js,ts,md}'",
