--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
       "dom.iterable",
       "ESNEXT"
     ],
-    "strict": false,    
+    "strict": true,    
     "rootDir": ".",
 
     "moduleResolution": "node",
