--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "yum-nexus",
+  "version": "0.1.0",
   "license": "ISC",
   "dependencies": {
     "@apollo/client": "^3.0.0-rc.4",
@@ -16,6 +17,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cuid": "^2.1.8",
+    "date-fns": "^2.14.0",
     "dotenv": "^8.2.0",
     "google-auth-library": "^6.0.0",
     "graphql": "^14.0.2",
@@ -25,8 +27,8 @@
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
     "next": "^9.4.4",
-    "nexus": "^0.23.0",
-    "nexus-plugin-prisma": "^0.9.0",
+    "nexus": "^0.24.2",
+    "nexus-plugin-prisma": "^0.10.0",
     "nexus-plugin-shield": "^0.1.4",
     "node-fetch": "^2.6.0",
     "passport": "^0.4.1",
@@ -74,6 +76,7 @@
     "@types/cookie": "^0.4.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
+    "@types/faker": "^4.1.12",
     "@types/jest": "^25.2.3",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/jwt-decode": "^2.2.1",
@@ -94,7 +97,8 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.0.2",
+    "eslint-plugin-react-hooks": "^4.0.4",
+    "esm": "^3.2.25",
     "faker": "^4.1.0",
     "jest": "^25.4.0",
     "jest-environment-node": "^26.0.1",
