--- a/codegen.yml
+++ b/codegen.yml
@@ -1,8 +1,9 @@
 overwrite: true
 schema: "./api/public/schema.graphql"
-documents: "./graphql/**/*.ts"
 generates:
   ./generated/graphql.tsx:
+    schema: "./apollo/typeDefs.ts"
+    documents: "./graphql/**/*.ts"
     plugins:
       - "typescript"
       - "typescript-operations"
