enable default menus

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 TOKEN_EXPIRY=15m
 REFRESH_TOKEN_EXPIRY=7d
 NEXT_PUBLIC_YUM_SERVER_URL=http://localhost:3000
+NEXT_PUBLIC_GOOGLE_CLIENT_ID=815607490371-b0jcpq2u7u0jcrehc3v6vp5s2qs5g8ku.apps.googleusercontent.com
+NEXT_PUBLIC_FACEBOOK_CLIENT_ID=230051388091734
