--- a/package.json
+++ b/package.json
@@ -35,8 +35,11 @@
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.1.20",
     "react-hook-form": "^5.7.2",
     "react-number-format": "^4.4.1",
+    "react-social-login-buttons": "^3.1.0",
     "recharts": "^1.8.5",
     "use-lodash-debounce": "^1.1.0",
     "zod": "^1.7.0"
@@ -86,7 +89,7 @@
     "@types/passport-facebook": "^2.1.10",
     "@types/passport-google-oauth20": "^2.0.3",
     "@types/react": "16.9.38",
-    "@types/react-facebook-login": "^4.1.1",
+    "@types/react-facebook-login": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^3.0.0",
     "@typescript-eslint/parser": "^3.0.0",
     "babel-jest": "^26.0.1",
