--- a/.ebextensions/03_more_env.config
+++ b/.ebextensions/03_more_env.config
@@ -4,6 +4,6 @@ option_settings:
         NODE_ENV: live
         TOKEN_EXPIRY: 15m
         REFRESH_TOKEN_EXPIRY: 7d
-        GOOGLE_CLIENT_ID: 815607490371-b0jcpq2u7u0jcrehc3v6vp5s2qs5g8ku.apps.googleusercontent.com
+        NEXT_PUBLIC_GOOGLE_CLIENT_ID: 815607490371-b0jcpq2u7u0jcrehc3v6vp5s2qs5g8ku.apps.googleusercontent.com
         GOOGLE_BROWSER_CLIENT_ID: 815607490371-b0jcpq2u7u0jcrehc3v6vp5s2qs5g8ku.apps.googleusercontent.com
-        FACEBOOK_CLIENT_ID: 230051388091734
+        NEXT_PUBLIC_FACEBOOK_CLIENT_ID: 230051388091734
