--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "license": "ISC",
   "dependencies": {
-    "@apollo/client": "^3.0.0-rc.10",
+    "@apollo/client": "^3.0.2",
     "@apollo/link-context": "^2.0.0-beta.3",
     "@apollo/link-error": "^2.0.0-beta.3",
     "@material-ui/core": "^4.11.0",
@@ -16,18 +16,18 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cuid": "^2.1.8",
-    "date-fns": "^2.14.0",
+    "date-fns": "^2.15.0",
     "dotenv": "^8.2.0",
-    "google-auth-library": "^6.0.0",
+    "google-auth-library": "^6.0.5",
     "graphql-middleware": "^4.0.2",
     "graphql-shield": "^7.2.6",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.19",
     "next": "^9.4.4",
     "nexus": "^0.25.0",
     "nexus-plugin-prisma": "^0.16.1",
-    "nexus-plugin-shield": "^0.1.5",
+    "nexus-plugin-shield": "^0.2.0",
     "node-fetch": "^2.6.0",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
@@ -36,13 +36,13 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-facebook-login": "^4.1.1",
-    "react-google-login": "^5.1.20",
-    "react-hook-form": "^6.0.0",
+    "react-google-login": "^5.1.21",
+    "react-hook-form": "^6.0.7",
     "react-number-format": "^4.4.1",
     "react-social-login-buttons": "^3.1.0",
     "recharts": "^1.8.5",
     "use-lodash-debounce": "^1.1.0",
-    "zod": "^1.7.1"
+    "zod": "^1.9.1"
   },
   "scripts": {
     "format": "npx prettier --write './**/*.{js,ts,md}'",
@@ -65,50 +65,50 @@
   },
   "prettier": "@prisma-labs/prettier-config",
   "devDependencies": {
-    "@babel/core": "^7.10.4",
+    "@babel/core": "^7.10.5",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-typescript": "^7.10.4",
-    "@graphql-codegen/cli": "^1.16.0",
-    "@graphql-codegen/fragment-matcher": "^1.16.0",
-    "@graphql-codegen/introspection": "^1.16.0",
-    "@graphql-codegen/typescript": "^1.16.0",
-    "@graphql-codegen/typescript-operations": "^1.16.0",
-    "@graphql-codegen/typescript-react-apollo": "^1.16.0",
+    "@graphql-codegen/cli": "^1.17.0",
+    "@graphql-codegen/fragment-matcher": "^1.17.0",
+    "@graphql-codegen/introspection": "^1.17.0",
+    "@graphql-codegen/typescript": "^1.17.0",
+    "@graphql-codegen/typescript-operations": "^1.17.0",
+    "@graphql-codegen/typescript-react-apollo": "^1.17.0",
     "@prisma-labs/prettier-config": "0.1.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/cookie": "^0.4.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
     "@types/faker": "^4.1.12",
-    "@types/jest": "^26.0.3",
+    "@types/jest": "^26.0.4",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.157",
-    "@types/node": "14.0.14",
-    "@types/passport": "^1.0.3",
+    "@types/node": "14.0.23",
+    "@types/passport": "^1.0.4",
     "@types/passport-facebook": "^2.1.10",
     "@types/passport-google-oauth20": "^2.0.3",
-    "@types/react": "16.9.41",
+    "@types/react": "16.9.43",
     "@types/react-facebook-login": "^4.1.2",
-    "@typescript-eslint/eslint-plugin": "^3.5.0",
-    "@typescript-eslint/parser": "^3.5.0",
+    "@typescript-eslint/eslint-plugin": "^3.6.1",
+    "@typescript-eslint/parser": "^3.6.1",
     "babel-jest": "^26.1.0",
     "babel-plugin-graphql-tag": "^2.5.0",
     "dotenv-cli": "^3.2.0",
-    "eslint": "^7.3.1",
+    "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-react": "^7.20.3",
-    "eslint-plugin-react-hooks": "^4.0.5",
+    "eslint-plugin-react-hooks": "^4.0.8",
     "esm": "^3.2.25",
     "faker": "^4.1.0",
     "jest": "^26.1.0",
     "jest-environment-node": "^26.1.0",
     "nanoid": "^3.1.9",
-    "pg": "^8.2.1",
+    "pg": "^8.3.0",
     "prettier": "^2.0.5",
     "ts-node": "^8.10.2",
-    "typescript": "3.9.6"
+    "typescript": "3.9.7"
   }
 }
